<resources>
    <string name="app_name">Java Healthify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Common-->
    <string name="upload_button_title">Upload</string>

    <!--    Onboarding  -->
    <string name="onboarding_title_1">Track your daily calories</string>
    <string name="onboarding_title_2">Control calories in your meals</string>z
    <string name="onboarding_title_3">Exercise for you</string>

    <string name="onboarding_subtitle_1">Helps you track your calories intake and consumption with ease and saves your progress for long term monitoring.</string>
    <string name="onboarding_subtitle_2">You can now control your calories intake by tracking the nutrition facts of your every meal with the help of our reliable food database.</string>
    <string name="onboarding_subtitle_3">Provide personalized workout plans, process tracking, social integration, and a diverse workout library to help user achieve their fitness goals.</string>

    <!--    Fill in information-->
    <string name="fill_in_information_title_1">Complete personal information</string>
    <string name="fill_in_information_description_1">We need some personal information to create your own profile. These information will be only use for this application.</string>
    <string name="fill_in_information_title_2">Complete your information</string>
    <string name="fill_in_information_description_2">We need some information below to calculate calories you need for a day and suggest suitable exercises for you.</string>

    <!--    Forgot password-->
    <string name="forgot_password_text">Forgot password</string>
    <string name="forgot_password_description">Enter your registered email, we will send you a password reset email</string>
    <string name="sent_reset_email_description">We have sent you an password reset email. Please check your inbox!</string>

    <!--navbar-->
    <string name="navbar_home">Home</string>
    <string name="navbar_menu">Menu</string>
    <string name="navbar_workout">Workout</string>
    <string name="navbar_community">Community</string>
    <string name="navbar_profile">Profile</string>

    <!--home-->
    <string name="Home_Name">Ariana Grandle!</string>
    <string name="Home_weight_Start">60</string>
    <string name="home_weight_target">80</string>
    <string name="Home_Daily_Calories">1000</string>
    <string name="Home_Steps">0</string>
    <string name="Home_Goal_Steps">10.000</string>
    <string name="Home_Calo">19</string>
    <string name="Home_Time">00:00</string>
    <string name="Home_Hello">Hello</string>
    <string name="Home_Noti">Remember to update your weight today</string>
    <string name="Home_Weight">kg</string>
    <string name="Home_Cal">cal</string>
    <string name="Home_Start">Start</string>
    <string name="Home_Target">Target</string>
    <string name="Home_Text_CaloDaily">Daily Calories</string>
    <string name="Home_Steps_Text">Steps</string>
    <string name="Home_Goal_Text">Goals:</string>
    <string name="Home_Excercise_Text">Exercise</string>
    <string name="Home_Hours_Text">hours</string>
    <string name="Home_ExcerciseDetail_Title">Exercise Detail</string>
    <string name="Home_WeightReport_Back">Weight Report</string>
    <string name="Home_DetailExcercise_Total">22</string>
    <string name="home_total_excercise_text">Total exercise</string>
    <string name="Home_TotalCalories">109</string>
    <string name="Home_TotalCalories_Text">Total calories burned</string>
    <string name="home_detail_legexcercise">99</string>
    <string name="home_detail_legexcercise_text">Leg exercise</string>
    <string name="home_detail_shoulderexcercise">10</string>
    <string name="home_detail_shoulderexcercise_text">Shoulder exercise</string>
    <string name="home_detail_others">10</string>
    <string name="home_detail_others_text">Others</string>
    <string name="home_detail_abs">80</string>
    <string name="home_detail_abs_text">Abs exercise</string>
    <string name="home_weight_report_text">Weight Report</string>
    <string name="home_icon_back">TODO</string>
    <string name="home_update_weight">Update your weight today</string>
    <string name="update_weight_text">Update Weight</string>
    <string name="total_weight_text">Total Weight</string>
    <string name="kg_binding">34Kg</string>
    <string name="better_than_yesterday_text">Better Than Yesterday</string>
    <string name="percent_binding">34%</string>
    <string name="update_weight_texts">Update Weight</string>
    <string name="menu_today">Today</string>

    <!--    menu-->
    <string name="dish_name_hint_text">Name of your dish</string>

    <string name="meal_type">Session</string>
    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Brunch</item>
        <item>Snack</item>

    </string-array>
    <string name="ingredients">Ingredients</string>
    <string name="total_calories">Total calories</string>
    <string name="ingredient_search_hint">Search for any ingredient</string>
    <string name="can_t_find_your_ingredient">Can\'t find your ingredient?</string>
    <string name="add_your_own">Add your own</string>

    <string name="Profile_Name">Ariana Grande</string>
    <string name="Profile_Email">AriGrande@gmail.com</string>
    <string name="Profile_Edit">Edit Profile</string>
    <string name="Profile_BirthDay">30/02/2002</string>
    <string name="Profile_PhoneNumber">0908123456</string>
    <string name="Profile_Address">UIT Linh Trung</string>

    <!--    workout-->
    <string name="tab_title_beginner">Beginner</string>
    <string name="tab_title_intermediate">Intermediate</string>
    <string name="tab_title_advance">Advance</string>
    <string name="workout_categories_app_bar_title">Workout categories</string>
    <string name="add_btn_txt">Add exercises</string>
    <string name="start_exercise_text">Start exercises</string>
    <string name="community_text">Community</string>
    <string name="Community_name">Ariana Grande</string>
    <string name="community_calories">31th March, 2023</string>
    <string name="community_calo">690</string>
    <string name="community_calotext">kcal</string>
    <string name="community_achievementtext">My achievement today</string>
    <string name="community_step">6.996</string>
    <string name="community_steptext">steps</string>
    <string name="community_kcalexcercise">6.996</string>
    <string name="community_kcalexcecisetext">kcal for excercises</string>
    <string name="community_kcalfood">1200</string>
    <string name="community_kcalfoodtext">kcal from foods</string>
    <string name="achievementdetail_detailstext">Details</string>
    <string name="community_achieventmentdetail_foodtext">Foods</string>
    <string name="community_achievmentdetails_textfood">Chicken Breast</string>
    <string name="community_details_kalo">246</string>
    <string name="community_detail_kcal">kcal</string>
    <string name="achievement_details_exercises_txt">Excercises</string>
    <string name="community_ahievemnt_Detail_excercise">Crunches</string>
    <string name="community_achievementdetail_kcal_excerise">20</string>
    <string name="community_achievement_detail_rep">50</string>
    <string name="reps">reps</string>
    <string name="workout_history_app_bar_title">History</string>
    <string name="workout_favorite_app_bar_title">Favorite</string>

    <!--     Community-->
    <string name="community_share_achievement_app_bar_title">Share your today achievement</string>
    <string name="community_following_app_bar_title">Your following today activities</string>
    <string name="report_app_bar_title">Report</string>
    <string name="send_report_button_title">Send report</string>
    <string name="pending_ingredients_string">Pending Ingredients</string>
    <string name="details">Details</string>
    <string name="add_category">Add category</string>
</resources>