<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/home_icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/home_weight_report_text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="260dp"
            android:layout_marginStart="-385dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_chart"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="-390dp"
            android:layout_marginTop="400dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_binding"
                android:textSize="45sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="70dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="-125dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/better_than_yesterday_text"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg_binding"
                android:textSize="45sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="70dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="-105dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/total_weight_text"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-370dp"
            android:layout_marginTop="600dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:background="@drawable/primary_button_background"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/update_weight_texts"
                />


        </LinearLayout>

    </LinearLayout>
</ScrollView>