<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.javahealthify.ui.screens.home.HomeVM" />
    </data>


    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        bind:context=".ui.screens.home.HomeFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="33dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/Home_Hello"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="-27dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/Home_Name"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/Home_Noti"
                    android:textColor="#E5E5E5"
                    android:textSize="12sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="370dp"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/onboarding_radius_panel"
                android:orientation="vertical" >

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChart"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="0dp" />

                <LinearLayout
                    android:id="@+id/legendLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/pieChart"
                    android:orientation="vertical" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="370dp"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/onboarding_radius_panel"
                android:orientation="vertical" >

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/Home_weight_Start"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Home_Weight"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/home_weight_target"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Home_Weight"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/Home_Daily_Calories"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Home_Cal"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                bind:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/Home_Start"
                    android:textColor="#CCCCCC"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/Home_Target"
                    android:textColor="#CCCCCC"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/Home_Text_CaloDaily"
                    android:textColor="#CCCCCC"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_statistics"
                android:layout_width="165dp"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:background="@drawable/onboarding_radius_panel"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Home_Steps_Text"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="23sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/stepCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/Home_Steps"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="92dp"
                    android:layout_marginTop="-24dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/Home_Steps_Text"
                    android:textSize="12sp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_runningshoes"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Home_Goal_Text"
                    android:textSize="10sp"
                    android:textColor="#E5E5E5"
                    bind:ignore="SmallSp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="-16.5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Home_Goal_Steps"
                    android:textSize="10sp"
                    bind:ignore="SmallSp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="76dp"
                    android:layout_marginTop="-16.5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Home_Steps_Text"
                    android:textSize="10sp"
                    bind:ignore="SmallSp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_retangle"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/excercise_detail"
                android:layout_width="165dp"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:background="@drawable/onboarding_radius_panel"
                android:layout_marginStart="225dp"
                android:layout_marginTop="-160dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Home_Excercise_Text"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="23sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/exercise_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/Home_Calo"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="-24dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/Home_Cal"
                    android:textSize="12sp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_calories"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-25dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/Home_Time"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="87dp"
                    android:layout_marginTop="-22.5dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/Home_Hours_Text"
                    android:textSize="12sp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_time"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-23dp"/>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</layout>
