<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/onboarding_radius_panel">

    <ImageView
        android:id="@+id/achievement_food_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_fooddemo" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-1dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/achievement_food_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/community_achievmentdetails_textfood"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/achievement_food_calories_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/community_details_kalo"
                android:textColor="#59C9A5"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/community_detail_kcal"
                android:textColor="#59C9A5"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
